--- a/upload_source_datasets.ipynb
+++ b/upload_source_datasets.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('postgresql://postgres:liltims@localhost:5433/postgres')"
+    "engine = create_engine('postgresql://postgres:<password>@localhost:5433/postgres')"
    ]
   },
   {
